更新 mattermost nginx 配置

--- a/mattermost/etc/nginx/conf.d/mattermost.conf
+++ b/mattermost/etc/nginx/conf.d/mattermost.conf
@@ -39,17 +39,38 @@ server {
   ## verify chain of trust of OCSP response using Root CA and Intermediate certs
   ssl_trusted_certificate /etc/nginx/ssl/ca.cer;
 
-  location / {
+  location /api/v3/users/websocket {
+       proxy_set_header Upgrade $http_upgrade;
+       proxy_set_header Connection "upgrade";
+       client_max_body_size 50M;
+       proxy_set_header Host $http_host;
+       proxy_set_header X-Real-IP $remote_addr;
+       proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+       proxy_set_header X-Forwarded-Proto $scheme;
+       proxy_set_header X-Frame-Options SAMEORIGIN;
+       proxy_buffers 256 16k;
+       proxy_buffer_size 16k;
+       proxy_read_timeout 600s;
+       proxy_pass http://mattermost/;
+   }
 
-    log_not_found on;
+   location / {
+       client_max_body_size 50M;
+       proxy_set_header Connection "";
+       proxy_set_header Host $http_host;
+       proxy_set_header X-Real-IP $remote_addr;
+       proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+       proxy_set_header X-Forwarded-Proto $scheme;
+       proxy_set_header X-Frame-Options SAMEORIGIN;
+       proxy_buffers 256 16k;
+       proxy_buffer_size 16k;
+       proxy_read_timeout 600s;
+       proxy_cache mattermost_cache;
+       proxy_cache_revalidate on;
+       proxy_cache_min_uses 2;
+       proxy_cache_use_stale timeout;
+       proxy_cache_lock on;
+       proxy_pass http://mattermost/;
+   }
 
-    proxy_pass http://mattermost/;
-    proxy_read_timeout 300;
-    proxy_connect_timeout 300;
-    proxy_redirect off;
-
-    proxy_set_header X-Forwarded-Proto $scheme;
-    proxy_set_header Host              $http_host;
-    proxy_set_header X-Real-IP         $remote_addr;
-  }
 }
