增加 mattermost 数据存放位置

--- a/mattermost/docker-compose.yml
+++ b/mattermost/docker-compose.yml
@@ -17,6 +17,7 @@ services:
     restart: always
     volumes:
       - ./etc/mattermost/config.json:/usr/local/mattermost/config/config.json
+      - ./data/mattermost:/data/mattermost
     links:
       - mysql
   mysql:
