增加默认用户和密码

--- a/rabbitmq/docker-compose.yml
+++ b/rabbitmq/docker-compose.yml
@@ -12,3 +12,6 @@ services:
             - "25672:25672"
             - "15671:15671"
             - "15672:15672"
+        environment:
+            - RABBITMQ_DEFAULT_USER
+            - RABBITMQ_DEFAULT_PASS
