切换默认语言

--- a/mattermost/etc/mattermost/config.json
+++ b/mattermost/etc/mattermost/config.json
@@ -203,8 +203,8 @@
         "EnableDaily": false
     },
     "LocalizationSettings": {
-        "DefaultServerLocale": "en",
-        "DefaultClientLocale": "en",
+        "DefaultServerLocale": "zh_CN",
+        "DefaultClientLocale": "zh_CN",
         "AvailableLocales": ""
     },
     "SamlSettings": {
