update shadowsocks version

--- a/shadowsocks/docker-compose.yml
+++ b/shadowsocks/docker-compose.yml
@@ -1,7 +1,8 @@
 version: '2'
 services:
   shadowsocks:
-    image: mritd/shadowsocks:3.0.8
+    image: mritd/shadowsocks:3.1.0
+    container_name: shadowsocks
     restart: always
     ports:
       - "23:23"
