feat(lightsocks): add LIGHT_MODULE
add LIGHT_MODULE

Signed-off-by: mritd <mritd1234@gmail.com>

--- a/lightsocks/docker-compose.yml
+++ b/lightsocks/docker-compose.yml
@@ -7,3 +7,6 @@ services:
       - ./lightsocks.json:/root/.lightsocks.json 
     ports: 
       - "56:56" 
+    environment:
+      - LIGHT_MODULE
+    command: $LIGHT_MODULE
