--- a/filebeat/filebeat.yml
+++ b/filebeat/filebeat.yml
@@ -151,10 +151,7 @@ filebeat.prospectors:
   # For each file found under this path, a harvester is started.
   # Make sure not file is defined twice as this can lead to unexpected behaviour.
   paths:
-    - /var/log/*.log
-    - /var/lib/docker/containers/*/*.log
-    #- c:\programdata\elasticsearch\logs\*
-
+   - /var/log/containers/*.log
   # Configure the file encoding for reading files with international characters
   # following the W3C recommendation for HTML5 (http://www.w3.org/TR/encoding).
   # Some sample encodings:
@@ -192,7 +189,7 @@ filebeat.prospectors:
   # Ignore files which were modified more then the defined timespan in the past.
   # ignore_older is disabled by default, so no files are ignored by setting it to 0.
   # Time strings like 2h (2 hours), 5m (5 minutes) can be used.
-  #ignore_older: 0
+  ignore_older: 8h 
 
   # Type to be published in the 'type' field. For Elasticsearch output,
   # the type defines the document type these entries should be stored
@@ -202,15 +199,15 @@ filebeat.prospectors:
   # How often the prospector checks for new files in the paths that are specified
   # for harvesting. Specify 1s to scan the directory as frequently as possible
   # without causing Filebeat to scan too frequently. Default: 10s.
-  #scan_frequency: 10s
+  scan_frequency: 30s
 
   # Defines the buffer size every harvester uses when fetching the file
-  #harvester_buffer_size: 16384
+  harvester_buffer_size: 32768
 
   # Maximum number of bytes a single log event can have
   # All bytes after max_bytes are discarded and not sent. The default is 10MB.
   # This is especially useful for multiline log messages which can get large.
-  #max_bytes: 10485760
+  max_bytes: 10485760
 
   ### JSON configuration
 
@@ -218,11 +215,11 @@ filebeat.prospectors:
   # JSON key on which to apply the line filtering and multiline settings. This key
   # must be top level and its value must be string, otherwise it is ignored. If
   # no text key is defined, the line filtering and multiline features cannot be used.
-  #json.message_key:
+  json.message_key: log
 
   # By default, the decoded JSON is placed under a "json" key in the output document.
   # If you enable this setting, the keys are copied top level in the output document.
-  #json.keys_under_root: false
+  json.keys_under_root: true 
 
   # If keys_under_root and this setting are enabled, then the values from the decoded
   # JSON object overwrite the fields that Filebeat normally adds (type, source, offset, etc.)
@@ -232,7 +229,7 @@ filebeat.prospectors:
   # If this setting is enabled, Filebeat adds a "json_error" key in case of JSON
   # unmarshaling errors or when a text key is defined in the configuration but cannot
   # be used.
-  #json.add_error_key: false
+  json.add_error_key: true
 
   ### Multiline options
 
@@ -270,7 +267,7 @@ filebeat.prospectors:
 
   # If symlinks is enabled, symlinks are opened and harvested. The harvester is openening the
   # original for harvesting but will report the symlink name as source.
-  #symlinks: false
+  symlinks: true 
 
   # Backoff values define how aggressively filebeat crawls new files for updates
   # The default values can be used in most cases. Backoff defines how long it is waited
@@ -299,7 +296,7 @@ filebeat.prospectors:
   # Close inactive closes the file handler after the predefined period.
   # The period starts when the last line of the file was, not the file ModTime.
   # Time strings like 2h (2 hours), 5m (5 minutes) can be used.
-  #close_inactive: 5m
+  close_inactive: 10m
 
   # Close renamed closes a file handler when the file is renamed or rotated.
   # Note: Potential data loss. Make sure to read and understand the docs for this option.
@@ -571,7 +568,7 @@ output.logstash:
   #enabled: true
 
   # The Logstash hosts
-  hosts: ["10.10.1.3:5044"]
+  hosts: ["172.16.0.31:5044"]
 
   # Number of workers per Logstash host.
   #worker: 1
