feat(brook): 增加镜像版本
增加镜像版本

Signed-off-by: mritd <mritd@mritd.me>

--- a/brook/docker-compose.yml
+++ b/brook/docker-compose.yml
@@ -1,7 +1,7 @@
 version: '2'
 services:
   brook:
-    image: mritd/brook 
+    image: mritd/brook:v20171113 
     restart: always
     ports:
       - "68:68"
