feat(brook): 调整 CMD 命令
调整 CMD 命令

Signed-off-by: mritd <mritd@mritd.me>

--- a/brook/docker-compose.yml
+++ b/brook/docker-compose.yml
@@ -6,5 +6,5 @@ services:
     ports:
       - "68:68"
     environment:
-      - BROOK_PASSWD 
-    command: brook bkserver -l :68 -p $BROOK_PASSWD -t 10 -m chinaunicom_sales
+      - BKCMD 
+    command: $BKCMD
