--- a/sentry/docker-compose.yaml
+++ b/sentry/docker-compose.yaml
@@ -1,3 +1,10 @@
+# Run docker-compose up -d
+# Run docker-compose exec sentry sentry upgrade to setup database and create admin user
+# (Optional) Run docker-compose exec sentry pip install sentry-slack if you want slack plugin, it can be done later
+# Run docker-compose restart sentry
+# Sentry is now running on public port 9000
+# refs: https://gist.github.com/denji/b801f19d95b7d7910982c22bb1478f96
+
 version: '2'
 
 services:
