:sparkles: feat(sentry): add sentry config file
add sentry config file

Signed-off-by: mritd <mritd1234@gmail.com>

--- a/sentry/docker-compose.yaml
+++ b/sentry/docker-compose.yaml
@@ -35,6 +35,8 @@ services:
       SENTRY_DB_USER: sentry
       SENTRY_DB_PASSWORD: sentry
       SENTRY_REDIS_HOST: redis
+    volumes:
+     - ./config.yml:/etc/sentry/config.yml
 
   cron:
     image: sentry:8.22.0
