--- a/sentry/docker-compose.yaml
+++ b/sentry/docker-compose.yaml
@@ -10,6 +10,8 @@ version: '2'
 services:
   redis:
     image: redis:3.2.11-alpine
+    volumes:
+     - ./redis:/data
 
   postgres:
     image: postgres:9.6.6-alpine
