:sparkles: feat(nginx): 调整日志目录
调整日志目录

Signed-off-by: mritd <mritd1234@gmail.com>

--- a/nginx/docker-compose.yml
+++ b/nginx/docker-compose.yml
@@ -7,7 +7,7 @@ services:
     volumes:
       - ./ssl:/etc/nginx/ssl
       - ./conf.d:/etc/nginx/conf.d
-      - ./log/nginx/:/var/log/nginx/
+      - ./log:/var/log/nginx/
     ports:
       - "80:80"
       - "443:443"
