:sparkles: feat(dragonite): 调整端口
调整端口

Signed-off-by: mritd <mritd1234@gmail.com>

--- a/dragonite/docker-compose.yaml
+++ b/dragonite/docker-compose.yaml
@@ -6,8 +6,9 @@ services:
     restart: always
     ports:
       - "152:152"
-      - "153:153"    
-      - "156:156"
+      - "152:152/udp"
+      - "153:153"
+      - "153:153/udp"
     environment:
       - DCMD
     command: ${DCMD}
