--- a/lightsocks/docker-compose.yml
+++ b/lightsocks/docker-compose.yml
@@ -2,6 +2,7 @@ version: '2'
 services:
   lightsocks:
     image: mritd/lightsocks:1.0.6
+    container_name: lightsocks
     restart: always
     volumes: 
       - ./lightsocks.json:/root/.lightsocks.json 
