--- a/brook/docker-compose.yml
+++ b/brook/docker-compose.yml
@@ -1,10 +1,11 @@
-version: '2'
+version: '3'
 services:
   brook:
-    image: mritd/brook:v20171113 
+    image: mritd/brook:v20180112
     restart: always
+    container_name: brook
     ports:
       - "68:68"
     environment:
       - BKCMD 
-    command: $BKCMD
+    command: ${BKCMD}
