:sparkles: feat(webqq): update image
update image

Signed-off-by: mritd <mritd1234@gmail.com>

--- a/webqq/docker-compose.yml
+++ b/webqq/docker-compose.yml
@@ -2,7 +2,7 @@ version: '2'
 services: 
   webqq:
     container_name: webqq
-    image: webqq
+    image: mritd/webqq
     restart: always
     ports:
       - "5000:5000"
