:bug:fix(coredns): 切换网络模式为 host，临时解决 dns udp 查询缓慢问题
切换网络模式为 host，临时解决 dns udp 查询缓慢问题

Signed-off-by: mritd <mritd1234@gmail.com>

--- a/coredns/docker-compose.yaml
+++ b/coredns/docker-compose.yaml
@@ -4,8 +4,7 @@ services:
     image: coredns/coredns:1.0.5
     container_name: coredns
     restart: always
-    ports:
-      - "53:53/udp"
+    network_mode: "host"
     volumes:
       - ./Corefile:/etc/Corefile
       - ./core.hosts:/etc/core.hosts
