--- a/rabbitmq/docker-compose.yml
+++ b/rabbitmq/docker-compose.yml
@@ -1,10 +1,11 @@
-version: '2'
+version: '3'
 services:
   rabbitmq:
-    image: rabbitmq:3.6.6-management-alpine
+    image: rabbitmq:3.7.4-management-alpine
+    container_name: rabbitmq
     restart: always
     volumes: 
-      - ./data:/var/lib/rabbitmq
+      - rabbitmq_data:/var/lib/rabbitmq
     ports:
       - "4369:4369"
       - "5671:5671"
