feat(taiga): add taiga
add taiga

Signed-off-by: mritd <mritd1234@gmail.com>

--- a/taiga/docker-compose.yml
+++ b/taiga/docker-compose.yml
@@ -5,10 +5,10 @@ services:
     container_name: taiga-front
     restart: always
     volumes:
-      - "./conf/taiga-front/conf.json:/usr/local/taiga-front/conf.json"
-      - "./conf/taiga-front/nginx/ssl:/etc/nginx/ssl"
-      - "./conf/taiga-front/nginx/conf.d:/etc/nginx/conf.d"
-      - "./conf/taiga-front/nginx/log:/var/log/nginx"
+      - "./conf/conf.json:/usr/local/taiga-front/dist/conf.json"
+      - "./conf/nginx/ssl:/etc/nginx/ssl"
+      - "./conf/nginx/conf.d:/etc/nginx/conf.d"
+      - "./conf/nginx/log:/var/log/nginx"
       - "data:/data"
     ports:
       - "80:80"
@@ -18,14 +18,14 @@ services:
     container_name: taiga-back
     restart: always
     volumes:
-      - "./conf/taiga-back/local.py:/usr/local/taiga-back/settings/local.py"
+      - "./conf/local.py:/usr/local/taiga-back/settings/local.py"
       - "data:/data"
   taiga-events:
     image: taiga-events
     container_name: taiga-events
     restart: always
     volumes:
-      - "./conf/taiga-events/config.json:/usr/local/taiga-events/config.json"
+      - "./conf/config.json:/usr/local/taiga-events/config.json"
 
 volumes:
   data:
