--- a/postgres/docker-compose.yml
+++ b/postgres/docker-compose.yml
@@ -5,11 +5,11 @@ services:
     container_name: postgres
     restart: always
     volumes: 
-      - postgres_data:/var/lib/postgresql/data
+      - data:/var/lib/postgresql/data
     ports:
       - "5432:5432"
     environment:
       - POSTGRES_USER
       - POSTGRES_PASSWORD
 volumes:
-  postgres_data:
+  data:
