--- a/tcp_proxy/nginx.conf
+++ b/tcp_proxy/nginx.conf
@@ -9,7 +9,7 @@ events {
 
 stream {
     upstream socks5_proxy {
-        least_conn;
+        hash $remote_addr;
         server 172.16.0.30:153;
         server 172.16.0.30:158;
     }
