feat(tcp proxy): 使用域名负载
使用域名负载

Signed-off-by: mritd <mritd1234@gmail.com>

--- a/tcp_proxy/nginx.conf
+++ b/tcp_proxy/nginx.conf
@@ -10,8 +10,8 @@ events {
 stream {
     upstream socks5_proxy {
         hash $remote_addr;
-        server 172.16.0.30:153;
-        server 172.16.0.30:158;
+        server mritd.docker:153;
+        server mritd.docker:158;
     }
 
     server {
