feat(dragonite): add bakup node
add bakup node

Signed-off-by: mritd <mritd1234@gmail.com>

--- a/dragonite/docker-compose.yaml
+++ b/dragonite/docker-compose.yaml
@@ -12,3 +12,13 @@ services:
     environment:
       - DCMD
     command: ${DCMD}
+  dragonite_bak:
+    image: dragonitenetwork/dragonite-java:fwd-0.4.0-prx-0.4.0-alpine
+    container_name: dragonite_bak
+    restart: always
+    ports:
+      - "158:153"
+      - "158:153/udp"
+    environment:
+      - BAKDCMD
+    command: ${BAKDCMD}
