feat(nginx): add vim config
add vim config

Signed-off-by: mritd <mritd1234@gmail.com>

--- a/nginx/docker-compose.yml
+++ b/nginx/docker-compose.yml
@@ -10,6 +10,7 @@ services:
       - ./ssl:/etc/nginx/ssl
       - ./conf.d:/etc/nginx/conf.d
       - ./log:/var/log/nginx/
+      - ./vippasswd:/etc/nginx/conf/vippasswd
     ports:
       - "80:80"
       - "443:443"
