feat(crxdl): add crxdl
add crxdl

Signed-off-by: mritd <mritd1234@gmail.com>

--- a/mritd/docker-compose.yml
+++ b/mritd/docker-compose.yml
@@ -56,6 +56,12 @@ services:
     networks:
       - nginx
     restart: always
+  crxdl:
+    image: mritd/crxdl:v1.0.0
+    container_name: crxdl
+    networks:
+      - nginx
+    restart: always
 
 networks:
   nginx:
