feat(mritd): add shells
add shells

Signed-off-by: mritd <mritd1234@gmail.com>

--- a/mritd/docker-compose.yml
+++ b/mritd/docker-compose.yml
@@ -56,6 +56,12 @@ services:
     networks:
       - nginx
     restart: always
+  shells:
+    image: mritd/shells
+    container_name: shells
+    networks:
+      - nginx
+    restart: always
 
 networks:
   nginx:
