feat(mritd): add jsonon
add jsonon

Signed-off-by: mritd <mritd1234@gmail.com>

--- a/mritd/docker-compose.yaml
+++ b/mritd/docker-compose.yaml
@@ -50,6 +50,12 @@ services:
     networks:
       - nginx
     restart: always
+  jsonon:
+    image: mritd/jsonon
+    container_name: jsonon
+    networks:
+      - nginx
+    restart: always
 
 networks:
   nginx:
