--- a/chrome-headless/docker-compose.yml
+++ b/chrome-headless/docker-compose.yml
@@ -6,4 +6,6 @@ services:
     restart: always
     ports:
       - "9222:9222"
-    command: --proxy-server=socks5://192.168.1.20:153
+    environment:
+      - CHROME_CMD
+    command: ${CHROME_CMD}
