feat(mtproxyweb): add mtproxy web
add mtproxy web

Signed-off-by: mritd <mritd1234@gmail.com>

--- a/mritd/docker-compose.yaml
+++ b/mritd/docker-compose.yaml
@@ -56,6 +56,16 @@ services:
     networks:
       - nginx
     restart: always
+  mtproxyweb:
+    image: mritd/mtproxyweb
+    container_name: mtproxyweb
+    networks:
+      - nginx
+    restart: always
+    environment:
+      - MT_ADDRESS
+      - MT_PORT
+      - MT_SECRET
 
 networks:
   nginx:
