feat(tcp_proxy): change addr
change addr

Signed-off-by: mritd <mritd1234@gmail.com>

--- a/tcp_proxy/nginx.conf
+++ b/tcp_proxy/nginx.conf
@@ -10,8 +10,8 @@ events {
 stream {
     upstream socks5_proxy {
         hash $remote_addr;
-        server mritd.docker:153 max_fails=2 fail_timeout=30s;
-        server mritd.docker:158 max_fails=2 fail_timeout=30s;
+        server mritd.node:153 max_fails=2 fail_timeout=30s;
+        server mritd.node:158 max_fails=2 fail_timeout=30s;
     }
 
     server {
