feat(shadowsocks2): update shadowscoks2 command
update shadowscoks2 command

Signed-off-by: mritd <mritd1234@gmail.com>

--- a/shadowsocks2/docker-compose.yml
+++ b/shadowsocks2/docker-compose.yml
@@ -1,3 +1,7 @@
+# Server: -s ss://AEAD_CHACHA20_POLY1305:PASSWORD@:26 -verbose
+# Client: -c ss://AEAD_CHACHA20_POLY1305:PASSWORD@[server_address]:26 \
+#           -socks :26 -udptun :8053=8.8.8.8:53,:8054=8.8.4.4:53 \
+#           -tcptun :8053=8.8.8.8:53,:8054=8.8.4.4:53 -verbose
 version: '3.5'
 services:
   shadowsocks:
@@ -6,6 +10,10 @@ services:
     restart: always
     ports:
       - "26:26"
+      - "8053:8053"
+      - "8053:8053/udp"
+      - "8054:8054"
+      - "8054:8054/udp"
     environment:
-      - SS_CONFIG
-    command: -s "${SS_CONFIG}" -verbose
+      - SS_CMD
+    command: "${SS_CMD}"
