feat(mritd): add myip
add myip

Signed-off-by: mritd <mritd1234@gmail.com>

--- a/mritd/docker-compose.yaml
+++ b/mritd/docker-compose.yaml
@@ -50,6 +50,12 @@ services:
     networks:
       - nginx
     restart: always
+  myip:
+    image: mritd/myip:v1.0.0
+    container_name: myip
+    networks:
+      - nginx
+    restart: always
   mtproxyweb:
     image: mritd/mtproxyweb
     container_name: mtproxyweb
